--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -10,34 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"></script>
-    <style>
-        body {
-            font-family: "Microsoft JhengHei", "Helvetica Neue", Helvetica, Arial, sans-serif;
-        }
-
-        .card-post {
-            color: #000;
-            text-decoration: none;
-        }
-
-        .post {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100%;
-            padding: 1rem;
-            margin: 1rem;
-            background-color: rgba(0, 0, 0, 0.3);
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-shadow: 0 0 5px #ccc;
-        }
-
-        .post:hover {
-            background-color: rgba(0, 0, 0, 0.5);
-        }
-    </style>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
 <body>
