--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -9,7 +9,7 @@ body {
 
 .post {
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: center;
     justify-content: center;
     height: 100%;
@@ -23,4 +23,9 @@ body {
 
 .post:hover {
     background-color: rgba(0, 0, 0, 0.5);
+}
+
+.post-cover img {
+    width: 100px;
+    margin-right: 1rem;
 }
