--- a/MVT/templates/about.html
+++ b/MVT/templates/about.html
@@ -1,5 +1,8 @@
 <!-- about.html -->
 {% extends 'base.html' %}
+{% block title %}
+關於我們
+{% endblock %}
 {% block content %}
 <h1>關於我們</h1>
 <p>{{ quote }}</p>
