--- a/MVT/templates/index.html
+++ b/MVT/templates/index.html
@@ -1,5 +1,8 @@
 <!-- index.html -->
 {% extends 'base.html' %}
+{% block title %}
+首頁
+{% endblock %}
 {% block content %}
 <p>今日佳句: {{ quote }}</p>
 {% endblock %}
