--- a/P04_myTemplate/mainsite/templates/tv.html
+++ b/P04_myTemplate/mainsite/templates/tv.html
@@ -19,6 +19,8 @@
     <nav class='navbar navbar-default'>
         <div class='container-fluid'>
             <div class='navbar-header'>
+                {% load static %}
+                <img src="{% static "images/logo.png" %}" width=80>
                 <a class='navbar-brand' href='#'>現正播出{{tv.name}}</a>
             </div>
             <ul class='nav navbar-nav'>
