--- a/P04_myTemplate/mainsite/templates/engtv.html
+++ b/P04_myTemplate/mainsite/templates/engtv.html
@@ -5,10 +5,13 @@
 {% block menu %}
 <ul class='nav navbar-nav'>
     <li class='active'><a href='/'>Home</a></li>
-    <li><a href='{% url "engtv-url" 0 %}'>Sky News</a></li>
+    {% for tv in tv_list %}
+    <li><a href='{% url "engtv-url" forloop.counter0 %}'>{{tv.name}}</a></li>
+    {% endfor %}
+    <!-- <li><a href='{% url "engtv-url" 0 %}'>Sky News</a></li>
     <li><a href='{% url "engtv-url" 1 %}'>Euro News</a></li>
     <li><a href='{% url "engtv-url" 2 %}'>Indea News</a></li>
-    <li><a href='{% url "engtv-url" 3 %}'>CCTV</a></li>
+    <li><a href='{% url "engtv-url" 3 %}'>CCTV</a></li> -->
 </ul>
 {% endblock %}
 {% block content %}
