--- a/P06_HTML_Form01/mysite/templates/header.html
+++ b/P06_HTML_Form01/mysite/templates/header.html
@@ -1,15 +1,19 @@
 <!-- header.html (Model_DB project) -->
 <nav class='navbar navbar-default'>
-<div class='container-fluid'>
-<div class='navbar-header'>
-<div class='navbar-brand' align=center>
-NTU手機賣場
-</div>
-</div>
-<ul class='nav navbar-nav'>
-<li class='active'><a href='/'>Home</a></li>
-<li><a href='/get_example'>GET範例</a></li>
-<li><a href='/admin'>後台管理</a></li> 
-</ul>
-</div>
+    <div class='container-fluid'>
+        <div class='navbar-header'>
+            <div class='navbar-brand' align=center>
+                NTU手機賣場
+            </div>
+        </div>
+        <ul class='nav navbar-nav'>
+            <li class='active'><a href='/'>Home</a></li>
+            <li><a href='/list/'>留言列表</a></li>
+            <li><a href='/post/'>留言版</a></li>
+            <li><a href='/contact/'>連絡我</a></li>
+            <li><a href='/post2db/'>我要貼文2db</a></li>
+            <li><a href='/get_example'>GET範例</a></li>
+            <li><a href='/admin'>後台管理</a></li>
+        </ul>
+    </div>
 </nav>
