新增 驗證密碼

--- a/P06_HTML_Form01/mysite/templates/posting.html
+++ b/P06_HTML_Form01/mysite/templates/posting.html
@@ -19,6 +19,7 @@
         <input id='user_id' type='text' name='user_id'>
         <label for='user_pass'>張貼/刪除密碼：</label>
         <input id='user_pass' type='password' name='user_pass'><br />
+        <input id="verify_code" type="text" name="verify_code" placeholder="請輸入驗證碼">
         <input type='submit' value='張貼'>
         <input type='reset' value='清除重填'>
     </form>
